--- a/Java_MVP/app/src/main/AndroidManifest.xml
+++ b/Java_MVP/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:fullBackupContent="true"
+        android:name=".TestApp"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.home.HomeActivity">
+        <activity android:name=".mvp.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
